# ram-machine-vm

./: .gitmodules  CMakeLists.txt  README.md
include/: definitions.h  print_functions.h
src/: main.c
src/parser/: CMakeLists.txt  Makefile  main.c
src/parser/src/: bison.y  flex.l
